[CoreBundle] fixes login page on Firefox (#3002)

--- a/main/core/Resources/less/users/login.less
+++ b/main/core/Resources/less/users/login.less
@@ -17,7 +17,7 @@
     // vertically center the login form in the page
     // if there is lots of space
     justify-content: center;
-    margin: auto;
+    margin: 0 auto;
     
     // makes logo, title, info text the same width as login form
     max-width: floor(@login-max-width / 2);
